# Zeptalytic_Web_Backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  README_Zeptalytic_Backend_Next_Phase.md  README_progress_append_rule.md  alembic.ini  directory-tree.txt  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260413_1830_pdb035_profile_settings_tables.py  (+18 more)
app/: __init__.py  main.py
app/api/: __init__.py  (+3 more)
progress/: README_progress_append_rule.md  progress.txt
prompt/: prompt_build.md  prompt_plan.md  prompt_spec_author.md
scripts/: bootstrap_repo_structure.sh  ralph-loop.sh
specs/: _template_next_phase_spec.json  application_layer_foundation.json  auth_session_account_security.json  background_jobs_and_security_hardening.json  dashboard_launcher_billing_aggregation_api.json  discord_identity_schema_correction.json  discord_integration_application_flow.json  frontend_backend_contract_alignment.json  frontend_runtime_integration_readiness.json  model_file_separation_refactor.json  next_phase_spec_sequence.json  parent_db_foundation.json  parent_db_verification_and_regression.json  parent_pay_integration_and_projection_foundation.json  profile_settings_addresses_preferences_api.json  rewards_api_application_layer.json  rewards_domain_db_schema.json  rewards_objectives_badges_application_api.json  rewards_verification_and_regression.json  support_announcements_service_status_api.json  transactional_email_service_brevo.json
tests/: conftest.py
(+236 files in other folders)
