[tool.poetry]
name = "zeptalytic-web-backend"
version = "0.1.0"
description = "Parent-site backend for the Zeptalytic platform"
authors = ["John Quinlan"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic-settings = "^2.10.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
httpx = "^0.28.1"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
